sql-test-results/ear-wpi.log
Running echo "-----------------------------------------------------------"

"-----------------------------------------------------------"
Running /home/jason/jsr308/checker-framework/checker/bin/javac -Ainfer=stubs -AmergeStubsWithSource -Xmaxerrs 10000 -Xmaxwarns 10000 -J-Xbootclasspath/p:/home/jason/jsr308/checker-framework/checker/dist/javac.jar -Xbootclasspath/p:/home/jason/jsr308/checker-framework/checker/dist/jdk8.jar --release 8 -classpath /home/jason/git/sql-checker-experiments/sql-test/ear-2ab6fd6e70aecdd295318bef10dd8d992abb7606/ear/target/classes:/home/jason/.m2/repository/io/netty/netty-all/5.0.0.Alpha2/netty-all-5.0.0.Alpha2.jar:/home/jason/.m2/repository/org/apache/mina/mina-core/2.0.9/mina-core-2.0.9.jar:/home/jason/.m2/repository/org/slf4j/slf4j-api/1.7.7/slf4j-api-1.7.7.jar:/home/jason/.m2/repository/postgresql/postgresql/9.1-901-1.jdbc4/postgresql-9.1-901-1.jdbc4.jar: -processor org.checkerframework.checker.sql.SqlChecker -d /home/jason/git/sql-checker-experiments/sql-test/ear-2ab6fd6e70aecdd295318bef10dd8d992abb7606/ear/target/classes -g -sourcepath /home/jason/git/sql-checker-experiments/sql-test/ear-2ab6fd6e70aecdd295318bef10dd8d992abb7606/ear/src/main/java: --release 8 --release 8 /home/jason/git/sql-checker-experiments/sql-test/ear-2ab6fd6e70aecdd295318bef10dd8d992abb7606/ear/src/main/java/tr/com/saricicek/constats/ProjectConstants.java /home/jason/git/sql-checker-experiments/sql-test/ear-2ab6fd6e70aecdd295318bef10dd8d992abb7606/ear/src/main/java/tr/com/saricicek/nettyserver/NettyServerHandler.java /home/jason/git/sql-checker-experiments/sql-test/ear-2ab6fd6e70aecdd295318bef10dd8d992abb7606/ear/src/main/java/tr/com/saricicek/nettyserver/NettyListener.java /home/jason/git/sql-checker-experiments/sql-test/ear-2ab6fd6e70aecdd295318bef10dd8d992abb7606/ear/src/main/java/tr/com/saricicek/minaserver/MinaListener.java /home/jason/git/sql-checker-experiments/sql-test/ear-2ab6fd6e70aecdd295318bef10dd8d992abb7606/ear/src/main/java/tr/com/saricicek/messagewriter/dao/MessageWriterDao.java

/home/jason/git/sql-checker-experiments/sql-test/ear-2ab6fd6e70aecdd295318bef10dd8d992abb7606/ear/src/main/java/tr/com/saricicek/messagewriter/dao/MessageWriterDao.java:24: error: [argument.type.incompatible] incompatible types in argument.
        		"('" + argMessage + "', " + argPort + ");");
        		                                    ^
  found   : @MaybeDangerousSql String
  required: @NotDangerousSql String
1 error
Running /home/jason/jsr308/checker-framework/checker/bin/javac -Ainfer=stubs -AmergeStubsWithSource -Xmaxerrs 10000 -Xmaxwarns 10000 -J-Xbootclasspath/p:/home/jason/jsr308/checker-framework/checker/dist/javac.jar -Xbootclasspath/p:/home/jason/jsr308/checker-framework/checker/dist/jdk8.jar --release 8 -Astubs=/tmp/tmpbJ5ieuiteration0 -classpath /home/jason/git/sql-checker-experiments/sql-test/ear-2ab6fd6e70aecdd295318bef10dd8d992abb7606/ear/target/classes:/home/jason/.m2/repository/io/netty/netty-all/5.0.0.Alpha2/netty-all-5.0.0.Alpha2.jar:/home/jason/.m2/repository/org/apache/mina/mina-core/2.0.9/mina-core-2.0.9.jar:/home/jason/.m2/repository/org/slf4j/slf4j-api/1.7.7/slf4j-api-1.7.7.jar:/home/jason/.m2/repository/postgresql/postgresql/9.1-901-1.jdbc4/postgresql-9.1-901-1.jdbc4.jar: -processor org.checkerframework.checker.sql.SqlChecker -d /home/jason/git/sql-checker-experiments/sql-test/ear-2ab6fd6e70aecdd295318bef10dd8d992abb7606/ear/target/classes -g -sourcepath /home/jason/git/sql-checker-experiments/sql-test/ear-2ab6fd6e70aecdd295318bef10dd8d992abb7606/ear/src/main/java: --release 8 --release 8 /home/jason/git/sql-checker-experiments/sql-test/ear-2ab6fd6e70aecdd295318bef10dd8d992abb7606/ear/src/main/java/tr/com/saricicek/constats/ProjectConstants.java /home/jason/git/sql-checker-experiments/sql-test/ear-2ab6fd6e70aecdd295318bef10dd8d992abb7606/ear/src/main/java/tr/com/saricicek/nettyserver/NettyServerHandler.java /home/jason/git/sql-checker-experiments/sql-test/ear-2ab6fd6e70aecdd295318bef10dd8d992abb7606/ear/src/main/java/tr/com/saricicek/nettyserver/NettyListener.java /home/jason/git/sql-checker-experiments/sql-test/ear-2ab6fd6e70aecdd295318bef10dd8d992abb7606/ear/src/main/java/tr/com/saricicek/minaserver/MinaListener.java /home/jason/git/sql-checker-experiments/sql-test/ear-2ab6fd6e70aecdd295318bef10dd8d992abb7606/ear/src/main/java/tr/com/saricicek/messagewriter/dao/MessageWriterDao.java

/home/jason/git/sql-checker-experiments/sql-test/ear-2ab6fd6e70aecdd295318bef10dd8d992abb7606/ear/src/main/java/tr/com/saricicek/messagewriter/dao/MessageWriterDao.java:24: error: [argument.type.incompatible] incompatible types in argument.
        		"('" + argMessage + "', " + argPort + ");");
        		                                    ^
  found   : @MaybeDangerousSql String
  required: @NotDangerousSql String
1 error
